# ai-improve-issue

./: .ai_improve_issue.yml  AGENTS.md  README.md  pyproject.toml
.dev/designs/: issue_auto_improve_設計.md
.dev/implementations/: 2025-01-graph-modes.md  pydantic-ai-migration.md
.dev/requirements/: improve_issue.md
.github/scripts/: improve_issue.py
.github/workflows/: issue_auto_improve.yml
src/ai_improve_issue/: __init__.py  config.py  graph_nodes.py  llm_factory.py  main.py  models.py  rag_client.py  tools.py  workflow_graph.py
src/github_actions_ai_improve_issue/: __main__.py  main.py
